# daydream-druid

./: .gitignore  Cargo.toml  Makefile.toml  build.rs  index.html  index.js  session.json
.cargo/: config.toml
.github/workflows/: ci.yml
src/: lib.rs  utils.rs
src/matrix/: login.rs  mod.rs  room.rs  sync.rs
src/views/: login.rs  main.rs
