[package]
name = "daydream-druid"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "daydream-desktop"
path = "src/bin/desktop.rs"

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features = ["image"] }
matrix-sdk = { version = "0.1.0", git = "https://github.com/matrix-org/matrix-rust-sdk", default-features = false, features = ["messages", "rustls-tls", "encryption"]} # features = ["encryption"]}
matrix-sdk-common-macros = { version = "0.1.0", git = "https://github.com/matrix-org/matrix-rust-sdk"}
async-trait = "0.1"
url = "2.1.1"
thiserror = "1.0"
futures-locks = { git = "https://github.com/asomers/futures-locks", default-features = false }
once_cell = "1.4.1"
cfg-if = "0.1"
serde = "1"
serde_json = "1"
futures = "0.3"

# Markdown
pulldown-cmark = "0.7.2"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "0.2", features = ["full"] }
dirs = "3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.67"
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "0.4"

[patch.crates-io]
olm-sys = { git = "https://gitlab.gnome.org/MTRNord/olm-sys.git", branch = "cmake", features = ["serde"]} 

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggresive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true